--- a/config/database.yml
+++ b/config/database.yml
@@ -54,9 +54,8 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-# test:
-#   <<: *default
-#   database: airbnb_clone_test
+test:
+  url: postgres://kalaunidipak5:4Rw9KOftpFka@ep-black-water-05722110.us-east-2.aws.neon.tech/testdb
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
